Adicionando identificação de duplo clique na mesma casa

--- a/Memory.html
+++ b/Memory.html
@@ -2,8 +2,7 @@
 <!-- Mostrar a segunda cor por um segundo -->
 <!-- Remover o sistema onclick e adicionar o "this" -->
 <!-- Dar funcionalidade para o botão "Nova partida" -->
-<!-- Remover bug de considerar um clique numa cor já revelada -->
-<!-- Remover bug de considerar dois cliques na mesma casa -->
+<!-- Desconsiderar qualquer clique que o usuário der em uma cor já exibida 'css.color != "#efeded"' -->
 <!DOCTYPE HTML>
 <html>
   <head>
